--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -8,7 +8,7 @@
   android:paddingBottom="@dimen/activity_vertical_margin"
   android:paddingLeft="@dimen/activity_horizontal_margin"
   android:paddingRight="@dimen/activity_horizontal_margin"
-  android:background="@drawable/side_nav_bar"
+  android:background="@drawable/emotes_background"
   android:gravity="bottom"
   android:orientation="vertical"
   android:theme="@style/ThemeOverlay.AppCompat.Dark">
